--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "mongoose-redis",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "Mongoose Cache: Integrated Redis caching for Mongoose queries.",
   "author": {
-    "name": "Nasa8x"    
+    "name": "Nasa8x"
   },
   "license": "MIT",
   "dependencies": {
     "mix-hash": "^1.0.5",
+    "mongoose": "^5.5.4",
     "redis": "^2.8.0"
   },
   "main": "src/index.js",
